# overpass_ql_parser

./: CMakeLists.txt  OverpassQL.g4  TLexer.g4  TParser.g4  main.cpp  print_ast.cpp  test_example1.overpassql  test_example2.overpassql  test_example3.overpassql  test_query.overpassql  test_query10.overpassql  test_query12.overpassql  test_query13.overpassql  test_query14.overpassql  test_query15.overpassql  test_query2.overpassql  test_query3.overpassql  test_query4.overpassql  test_query5.overpassql  test_query6.overpassql  test_query7.overpassql  test_query8.overpassql  test_query9.overpassql
cmake/: FindANTLR.cmake
test_queries/filters/: area_filter.overpassql  around_filter.overpassql  bounding_box_filter.overpassql  changed_filter.overpassql  conditional_filter.overpassql  element_id_filter.overpassql  kv_filter.overpassql  newer_filter.overpassql  pivot_filter.overpassql  polygon_filter.overpassql  recurse_filter.overpassql  set_filter.overpassql  user_filter.overpassql
test_queries/statements/: compare_statement.overpassql  complete_statement.overpassql  convert_statement.overpassql  difference_statement.overpassql  for_statement.overpassql  foreach_statement.overpassql  if_statement.overpassql  is_in_statement.overpassql  item_statement.overpassql  local_statement.overpassql  make_statement.overpassql  out_statement.overpassql  query_statement.ovepassql  recurse_statement.overpassql  retro_statement.overpassql  timeline_statement.overpassql  union_statement.overpassql
